[project]
name = "mu-mamba"
description = "MU-Mamba for 2D medical image segmentation"
readme = "README.md"
authors = [
    { name = "MU-Mamba contributors" }
]
requires-python = ">= 3.9"
dynamic = ["version"]
license = { file = "LICENSE" }  # Include a LICENSE file in your repo
keywords = ["medical image segmentation", "mamba", "state-space model", "pytorch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix"
]
dependencies = [
    "torch",
    "tilelang==0.1.8",
    "quack-kernels==0.3.1",
    "triton>=3.5.0",
    "ninja",
    "einops",
    "packaging",
    "setuptools>=61.0.0",
]
[project.urls]
Repository = "https://github.com/your-username/MU-Mamba"

[project.optional-dependencies]
causal-conv1d = [
    "causal-conv1d>=1.2.0"
]
dev = [
    "pytest"
]


[build-system]
# torch is intentionally excluded: pip's build isolation would install
# torch-cpu from PyPI, ignoring the user's CUDA-enabled torch.
# Users building from source should install torch first, then:
#   pip install mamba-ssm --no-build-isolation
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "packaging",
    "ninja",
]
build-backend = "setuptools.build_meta"
